# wellPlate-app

./: .gitignore  COMPLETE_FAMILY_PACK_REDESIGN.md  CONTACT_INFO_UPDATE_GUIDE.md  FAMILY_PACK_COMPLETE_DOCUMENTATION.md  FAMILY_PACK_DOCUMENTATION.md  FAMILY_PACK_IMPLEMENTATION_ROADMAP.md  FAMILY_PACK_IMPLEMENTATION_STATUS.md  FAMILY_PACK_REDESIGN_ROADMAP.md  FIX_PREPARED_STATEMENT_ERROR.md  GDPR_COMPLIANCE_GUIDE.md  GDPR_IMPLEMENTATION_COMPLETE.md  LAUNCH_CHECKLIST.md  PRIVACY_POLICY.md  README.md  SECURITY_SETUP_GUIDE.md  TERMS_OF_SERVICE.md  TESTING_CHECKLIST.md  env.example  package.json  pnpm-lock.yaml  restart-worker.bat  start-all.bat  start-all.ps1  start-services.bat  start-services.ps1  start-worker.ps1  supabase-additional-rls-setup.sql  supabase-coach-rls-setup.sql  supabase-rls-setup.sql  supabase-safe-rls-setup.sql  supabase-security-test.sql  supabase-storage-setup.sql  test-apis.sh  test-variety.ps1  test-worker.ps1  turbo.json  vercel.json
.github/workflows/: ci.yml
apps/web/: AI_COACH_README.md  META_PIXEL_SETUP.md  README.md  (+18 more)
apps/worker/: Dockerfile  Procfile  README.md  env.example  main.py  pyproject.toml  render.yaml  requirements.txt  run_worker.py  simple_main.py  simple_start.py  start.py  start_worker.py
apps/worker/enhanced/: EnhancedWorkerService.md
apps/worker/ml/: BudgetOptimizer.md  PreferenceLearning.md
apps/worker/tests/: test_generate.py
apps/worker/worker/: config.py  main.py  schemas.py
apps/worker/worker/routers/: generate.py  health.py
apps/worker/worker/services/: openai_client.py
schemas/: FamilyPackPrismaSchema.txt
(+179 files in other folders)
